# orchex

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
eedata/: blobs.py  dataextract.py  helper_functions.py
orchex/: __init__.py  blobs.py  dataextract.py  helper_functions.py
