[tool.poetry]
name = "orchex"
version = "0.1.0"
description = "A library for the orchestration of data workflows, including hierarchical extraction, transformation with pseudonymisation, automated documentation, and secure sharing mechanisms."
authors = ["Simon Woodhead <simon.woodhead@eedi.co.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
gspread = "^5.12.3"
pyodbc = { version = "^5.0.1", markers = "sys_platform == 'win32'" }
pymssql = { version = "^2.2.11", markers = "sys_platform != 'win32'" }
inflect = "^7.0.0"
azure-data-tables = "^12.4.4"
azure-storage-blob = "^12.19.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pre-commit = "^3.6.0"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# On top of the default `select` (`E`, `F`), enable isort (`I`) because it is enabled "on save" in the VS Code extension
extend-select = ["I"]