[tool.poetry]
name = "orchex"
version = "0.1.0"
description = "A library for the orchestration of data workflows, including hierarchical extraction, transformation with pseudonymisation, automated documentation, and secure sharing mechanisms."
authors = ["Simon Woodhead <simon.woodhead@eedi.co.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "orchex"},
    {include = "orchex/py.typed"}
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
numpy = "^1.26.2"
gspread = "^5.12.3"


inflect = "^7.0.0"
azure-data-tables = "^12.4.4"
azure-storage-blob = "^12.19.0"
pyodbc = "^5.0.1"
mnemonic = "^0.21"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"
pre-commit = "^3.6.0"
ipykernel = "^6.27.1"
pylint = {extras = ["spelling"], version = "^3.0.3"}
pytest = "^7.4.3"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# On top of the default `select` (`E`, `F`), enable isort (`I`) because it is enabled "on save" in the VS Code extension
extend-select = ["I", "D"]
# On top of the Google convention, disable "D417", which requires documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
# Enable docstring checking
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
exclude = [
    "orchex/dataextract.py",
    "orchex/helper_functions.py"
]

[[tool.mypy.overrides]]
module = "orchex.blobs"
disallow_untyped_defs = false

